--- a/4. Dependency Injection/OneManBlog/src/OneManBlog/project.json
+++ b/4. Dependency Injection/OneManBlog/src/OneManBlog/project.json
@@ -7,7 +7,9 @@
         "Microsoft.AspNet.Server.WebListener": "1.0.0-beta4",
         "Microsoft.AspNet.Diagnostics": "1.0.0-beta4",
         "Microsoft.AspNet.Mvc": "6.0.0-beta4",
-        "Microsoft.AspNet.WebApi.Core": "5.2.3"
+        "Microsoft.AspNet.WebApi.Core": "5.2.3",
+        "Autofac": "4.0.0-alpha2",
+        "Autofac.Dnx": "4.0.0-alpha2"
     },
 
     "commands": {
