--- a/3. Hosting/TodoList/src/TodoList/project.json
+++ b/3. Hosting/TodoList/src/TodoList/project.json
@@ -7,7 +7,8 @@
         "Microsoft.AspNet.Server.WebListener": "1.0.0-beta4",
         "Microsoft.AspNet.Diagnostics": "1.0.0-beta4",
         "Microsoft.AspNet.Mvc": "6.0.0-beta4",
-        "Microsoft.AspNet.WebApi.Core": "5.2.3"
+        "Microsoft.AspNet.WebApi.Core": "5.2.3",
+        "Microsoft.AspNet.Hosting": "1.0.0-beta4"
     },
 
     "commands": {
