--- a/6. Datastore/TodoList/src/TodoList/project.json
+++ b/6. Datastore/TodoList/src/TodoList/project.json
@@ -1,40 +1,45 @@
 {
-    "webroot": "wwwroot",
-    "version": "1.0.0-*",
+  "webroot": "wwwroot",
+  "version": "1.0.0-*",
 
-    "dependencies": {
-        "Microsoft.AspNet.Server.IIS": "1.0.0-beta4",
-        "Microsoft.AspNet.Server.WebListener": "1.0.0-beta4",
-        "Microsoft.AspNet.Diagnostics": "1.0.0-beta4",
-        "Microsoft.AspNet.Mvc": "6.0.0-beta4",
-        "Microsoft.AspNet.WebApi.Core": "5.2.3",
-        "Autofac": "4.0.0-alpha2",
-        "Autofac.Dnx": "4.0.0-alpha2",
-        "xunit": "2.1.0-beta2-*",
-        "xunit.runner.dnx": "2.1.0-beta2-*",
-        "Moq": "4.2.1506.2515"
-    },
+  "dependencies": {
+    "Microsoft.AspNet.Server.IIS": "1.0.0-beta4",
+    "Microsoft.AspNet.Server.WebListener": "1.0.0-beta4",
+    "Microsoft.AspNet.Diagnostics": "1.0.0-beta4",
+    "Microsoft.AspNet.Mvc": "6.0.0-beta4",
+    "Microsoft.AspNet.WebApi.Core": "5.2.3",
+    "Autofac": "4.0.0-alpha2",
+    "Autofac.Dnx": "4.0.0-alpha2",
+    "xunit": "2.1.0-beta2-*",
+    "xunit.runner.dnx": "2.1.0-beta2-*",
+    "Moq": "4.2.1506.2515",
+    "EntityFramework.SqlServer": "7.0.0-beta4",
+    "EntityFramework.Commands": "7.0.0-beta4",
+    "Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta4",
+    "EntityFramework.SQLite": "7.0.0-beta1"
+  },
 
-    "commands": {
-        "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5000",
-        "test": "xunit.runner.dnx"
-    },
+  "commands": {
+    "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5000",
+    "test": "xunit.runner.dnx",
+    "ef": "EntityFramework.Commands"
+  },
 
-    "frameworks": {
-        "dnx451": { },
-        "dnxcore50": { }
-    },
+  "frameworks": {
+    "dnx451": { },
+    "dnxcore50": { }
+  },
 
-    "publishExclude": [
-        "node_modules",
-        "bower_components",
-        "**.xproj",
-        "**.user",
-        "**.vspscc"
-    ],
-    "exclude": [
-        "wwwroot",
-        "node_modules",
-        "bower_components"
-    ]
+  "publishExclude": [
+    "node_modules",
+    "bower_components",
+    "**.xproj",
+    "**.user",
+    "**.vspscc"
+  ],
+  "exclude": [
+    "wwwroot",
+    "node_modules",
+    "bower_components"
+  ]
 }
