--- a/6. Datastore/TodoList/src/TodoList/config.json
+++ b/6. Datastore/TodoList/src/TodoList/config.json
@@ -1,7 +1,7 @@
 ﻿{
     "Data": {
         "DefaultConnection": { 
-            "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=ToDoItemsDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+            "ConnectionString": "Server=(local);Database=ToDoItems;Trusted_Connection=True;MultipleActiveResultSets=true"
         }
     },
     "EntityFramework": {
