--- a/5. Gulp/TodoList/src/TodoList/project.json
+++ b/5. Gulp/TodoList/src/TodoList/project.json
@@ -12,12 +12,17 @@
         "Autofac.Dnx": "4.0.0-alpha2",
         "xunit": "2.1.0-beta2-*",
         "xunit.runner.dnx": "2.1.0-beta2-*",
-        "Moq": "4.2.1506.2515"
+        "Moq": "4.2.1506.2515",
+
+        "EntityFramework.SqlServer": "7.0.0-beta4",
+        "EntityFramework.Commands": "7.0.0-beta4",
+        "Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta4"
     },
 
     "commands": {
         "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5000",
-        "test": "xunit.runner.dnx"
+      "test": "xunit.runner.dnx",
+      "ef": "EntityFramework.Commands"
     },
 
     "frameworks": {
