fix for EF apply mig issue

--- a/6. Datastore/TodoList/src/TodoList/project.json
+++ b/6. Datastore/TodoList/src/TodoList/project.json
@@ -16,7 +16,8 @@
     "EntityFramework.SqlServer": "7.0.0-beta4",
     "EntityFramework.Commands": "7.0.0-beta4",
     "Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta4",
-    "EntityFramework.SQLite": "7.0.0-beta1"
+    "EntityFramework.SQLite": "7.0.0-beta1",
+    "EntityFramework": "7.0.0-beta4"
   },
 
   "commands": {
